Add a book on self avoiding random walk

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 6e53ad4dbcade0ee0547f7fcde99dc7c8332f041
+% Commit: a6e36e3f134854c0fe13d17ecd6bb4f73cf320ec
 % Date: 2023-08-06
 % ---------------------------
 
@@ -3104,24 +3104,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {Stochastic heat equation with multiplicative
-		  fractional-colored noise},
-  journal	= {J. Theoret. Probab.},
-  fjournal	= {Journal of Theoretical Probability},
-  volume	= {23},
-  year		= {2010},
-  number	= {3},
-  pages		= {834--870},
-  issn		= {0894-9840},
-  mrclass	= {60H15 (60G22 60H05)},
-  mrnumber	= {2679959},
-  mrreviewer	= {David Nualart},
-  doi		= {10.1007/s10959-009-0237-3},
-  url		= {https://doi.org/10.1007/s10959-009-0237-3}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {The stochastic wave equation with fractional noise: a
 		  random field approach},
   journal	= {Stochastic Process. Appl.},
@@ -3136,6 +3118,24 @@
   mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
   doi		= {10.1016/j.spa.2010.08.006},
   url		= {https://doi.org/10.1016/j.spa.2010.08.006}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {Stochastic heat equation with multiplicative
+		  fractional-colored noise},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {23},
+  year		= {2010},
+  number	= {3},
+  pages		= {834--870},
+  issn		= {0894-9840},
+  mrclass	= {60H15 (60G22 60H05)},
+  mrnumber	= {2679959},
+  mrreviewer	= {David Nualart},
+  doi		= {10.1007/s10959-009-0237-3},
+  url		= {https://doi.org/10.1007/s10959-009-0237-3}
 }
 
 @Article{	  balan.yuan:22:spatial,
@@ -7556,23 +7556,6 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -7586,6 +7569,23 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -13646,7 +13646,23 @@
   url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
 
-@Article{	  chen:00:on,
+@InCollection{	  chen:00:on,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
+}
+
+@Article{	  chen:00:on*1,
   author	= {Chen, Xia},
   title		= {On the limit laws of the second order for additive
 		  functionals of {H}arris recurrent {M}arkov chains},
@@ -13661,22 +13677,6 @@
   mrnumber	= {1736591},
   doi		= {10.1007/PL00008724},
   url		= {https://doi.org/10.1007/PL00008724}
-}
-
-@InCollection{	  chen:00:on*1,
-  author	= {Chen, Xia},
-  title		= {On the law of the iterated logarithm for local times of
-		  recurrent random walks},
-  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
-		  1999)},
-  series	= {Progr. Probab.},
-  volume	= {47},
-  pages		= {249--259},
-  publisher	= {Birkh\"{a}user Boston, Boston, MA},
-  year		= {2000},
-  mrclass	= {60F15 (60J55)},
-  mrnumber	= {1857326},
-  mrreviewer	= {Ingemar Kaj}
 }
 
 @Article{	  chen:01:exact,
@@ -15074,6 +15074,17 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -15089,17 +15100,6 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -18364,23 +18364,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18396,6 +18379,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -20853,6 +20853,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -20865,21 +20880,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -29720,7 +29720,25 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@InCollection{	  hara.slade:00:scaling,
+@Article{	  hara.slade:00:scaling,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
+}
+
+@InCollection{	  hara.slade:00:scaling*1,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -29739,24 +29757,6 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
-}
-
-@Article{	  hara.slade:00:scaling*1,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -40496,6 +40496,19 @@
   url		= {https://doi.org/10.1214/14-AIHP633}
 }
 
+@Book{		  madras.slade:93:self-avoiding,
+  author	= {Madras, Neal and Slade, Gordon},
+  title		= {The self-avoiding walk},
+  series	= {Probability and its Applications},
+  publisher	= {Birkh\"{a}user Boston, Inc., Boston, MA},
+  year		= {1993},
+  pages		= {xiv+425},
+  isbn		= {0-8176-3589-0},
+  mrclass	= {82-02 (60K35 82B41 82C22 82D60)},
+  mrnumber	= {1197356},
+  mrreviewer	= {Cheng Xun Wu}
+}
+
 @Article{	  madras:14:lower,
   author	= {Madras, Neal},
   title		= {A lower bound for the end-to-end distance of the
@@ -46613,24 +46626,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of {L}\'{e}vy processes with
-		  drift},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {34},
-  year		= {2006},
-  number	= {3},
-  pages		= {1035--1051},
-  issn		= {0091-1798},
-  mrclass	= {60G51 (60H10)},
-  mrnumber	= {2243878},
-  mrreviewer	= {Tina M. Marquardt},
-  doi		= {10.1214/009117905000000620},
-  url		= {https://doi.org/10.1214/009117905000000620}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of one-dimensional {SDE}s
 		  driven by a fractional {B}rownian motion},
   journal	= {Statist. Probab. Lett.},
@@ -46645,6 +46640,24 @@
   mrreviewer	= {Andreas Neuenkirch},
   doi		= {10.1016/j.spl.2005.10.021},
   url		= {https://doi.org/10.1016/j.spl.2005.10.021}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of {L}\'{e}vy processes with
+		  drift},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {34},
+  year		= {2006},
+  number	= {3},
+  pages		= {1035--1051},
+  issn		= {0091-1798},
+  mrclass	= {60G51 (60H10)},
+  mrnumber	= {2243878},
+  mrreviewer	= {Tina M. Marquardt},
+  doi		= {10.1214/009117905000000620},
+  url		= {https://doi.org/10.1214/009117905000000620}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -57094,6 +57107,22 @@
 
 @Article{	  talagrand:06:parisi,
   author	= {Talagrand, Michel},
+  title		= {Parisi measures},
+  journal	= {J. Funct. Anal.},
+  fjournal	= {Journal of Functional Analysis},
+  volume	= {231},
+  year		= {2006},
+  number	= {2},
+  pages		= {269--286},
+  issn		= {0022-1236},
+  mrclass	= {82B44 (28A33 82D30)},
+  mrnumber	= {2195333},
+  doi		= {10.1016/j.jfa.2005.03.001},
+  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
+}
+
+@Article{	  talagrand:06:parisi*1,
+  author	= {Talagrand, Michel},
   title		= {The {P}arisi formula},
   journal	= {Ann. of Math. (2)},
   fjournal	= {Annals of Mathematics. Second Series},
@@ -57107,22 +57136,6 @@
   mrreviewer	= {Fran\c{c}ois Germinet},
   doi		= {10.4007/annals.2006.163.221},
   url		= {https://doi.org/10.4007/annals.2006.163.221}
-}
-
-@Article{	  talagrand:06:parisi*1,
-  author	= {Talagrand, Michel},
-  title		= {Parisi measures},
-  journal	= {J. Funct. Anal.},
-  fjournal	= {Journal of Functional Analysis},
-  volume	= {231},
-  year		= {2006},
-  number	= {2},
-  pages		= {269--286},
-  issn		= {0022-1236},
-  mrclass	= {82B44 (28A33 82D30)},
-  mrnumber	= {2195333},
-  doi		= {10.1016/j.jfa.2005.03.001},
-  url		= {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 
 @Article{	  talagrand:10:construction,
@@ -58334,6 +58347,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -58348,23 +58378,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
